--- a/envmemo.ipynb
+++ b/envmemo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "09f88a6c",
    "metadata": {},
    "outputs": [
@@ -26,11 +26,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a=2, b=3\n",
-      "加法: 2 + 3 =  5\n",
-      "減法: 2 - 3 = -1\n",
-      "乘法: 2 * 3 =  6\n",
-      "除法: 2 / 3 = 0.7\n"
+      " a=2, 型別為<class 'int'>\n",
+      " b=3, 型別為<class 'int'>\n",
+      "\n",
+      "加法: 2 +  3 =   5\n",
+      "減法: 2 -  3 =  -1\n",
+      "乘法: 2 *  3 =   6\n",
+      "除法: 2 /  3 = 0.7\n",
+      "餘數: 2 %  3 =   2\n",
+      "次方: 2 ** 3 =   8\n"
      ]
     }
    ],
@@ -38,11 +42,23 @@
     "a = 2\n",
     "b = 3\n",
     "\n",
-    "print(f\"a={a}, b={b}\")\n",
-    "print(f\"加法: {a} + {b} = {a+b:2d}\")\n",
-    "print(f\"減法: {a} - {b} = {a-b:2d}\")\n",
-    "print(f\"乘法: {a} * {b} = {a*b:2d}\")\n",
-    "print(f\"除法: {a} / {b} = {a/b:2.1f}\")\n"
+    "print(f\" a={a}, 型別為{type(a)}\\n b={b}, 型別為{type(b)}\",end=\"\\n\\n\")\n",
+    "print(f\"加法: {a} +  {b} = {a+b:3d}\")\n",
+    "print(f\"減法: {a} -  {b} = {a-b:3d}\")\n",
+    "print(f\"乘法: {a} *  {b} = {a*b:3d}\")\n",
+    "print(f\"除法: {a} /  {b} = {a/b:3.1f}\")\n",
+    "print(f\"餘數: {a} %  {b} = {a%b:3d}\")\n",
+    "print(f\"次方: {a} ** {b} = {a**b:3d}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ba676c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 有一個直角三角形，已知二邊長，求第三邊長"
    ]
   }
  ],
