--- a/envmemo.ipynb
+++ b/envmemo.ipynb
@@ -53,12 +53,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6ba676c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "由二邊長 4 及 5 構成的直角三角形，其斜邊長為 6.40\n"
+     ]
+    }
+   ],
    "source": [
-    "# 有一個直角三角形，已知二邊長，求第三邊長"
+    "# 有一個直角三角形，已知二邊長，求第三邊長\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "A_side = 4\n",
+    "B_side = 5\n",
+    "\n",
+    "C_side = math.sqrt(A_side**2 + B_side**2)\n",
+    "\n",
+    "print(f\"由二邊長 {A_side} 及 {B_side} 構成的直角三角形，其斜邊長為 {C_side:0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e31b44c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "由二邊長 [4, 5] 構成的直角三角形，其斜邊長為 6.40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用lambda方式重寫\n",
+    "\n",
+    "import math \n",
+    "\n",
+    "side = [4, 5]\n",
+    "slen = math.sqrt((lambda lst: sum(x**2 for x in lst))(side)) \n",
+    "print(f\"由二邊長 {side} 構成的直角三角形，其斜邊長為 {slen:0.2f}\")"
    ]
   }
  ],
