--- a/envmemo.ipynb
+++ b/envmemo.ipynb
@@ -17,89 +17,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "09f88a6c",
+   "cell_type": "markdown",
+   "id": "5b5cab1e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " a=2, 型別為<class 'int'>\n",
-      " b=3, 型別為<class 'int'>\n",
-      "\n",
-      "加法: 2 +  3 =   5\n",
-      "減法: 2 -  3 =  -1\n",
-      "乘法: 2 *  3 =   6\n",
-      "除法: 2 /  3 = 0.7\n",
-      "餘數: 2 %  3 =   2\n",
-      "次方: 2 ** 3 =   8\n"
-     ]
-    }
-   ],
    "source": [
-    "a = 2\n",
-    "b = 3\n",
-    "\n",
-    "print(f\" a={a}, 型別為{type(a)}\\n b={b}, 型別為{type(b)}\",end=\"\\n\\n\")\n",
-    "print(f\"加法: {a} +  {b} = {a+b:3d}\")\n",
-    "print(f\"減法: {a} -  {b} = {a-b:3d}\")\n",
-    "print(f\"乘法: {a} *  {b} = {a*b:3d}\")\n",
-    "print(f\"除法: {a} /  {b} = {a/b:3.1f}\")\n",
-    "print(f\"餘數: {a} %  {b} = {a%b:3d}\")\n",
-    "print(f\"次方: {a} ** {b} = {a**b:3d}\")\n"
+    "## git"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6ba676c1",
+   "cell_type": "markdown",
+   "id": "af68feb6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "由二邊長 4 及 5 構成的直角三角形，其斜邊長為 6.40\n"
-     ]
-    }
-   ],
    "source": [
-    "# 有一個直角三角形，已知二邊長，求第三邊長\n",
+    "- 下載安裝\n",
+    "- 於要作版本管理的資料夾中進行初始化\n",
+    "    - git <font color=\"yellow\">init</font>\n",
+    "- 設置目前的git要進行上傳的使用者帳號、郵件\n",
+    "    - git <font color=\"yellow\">config</font> <font color=\"gray\">--global</font> <font color=\"lightblue\">user.name</font> <font color=\"green\">\"phillipsback\"</font>\n",
+    "    - git <font color=\"yellow\">config</font> <font color=\"gray\">--global</font> <font color=\"lightblue\">user.email</font> <font color=\"green\">\"phillipsback@hotmail.com\"</font>\n",
     "\n",
-    "import math\n",
+    "    (如果只是在目前的資料夾套用此帳號、郵件資訊，則可以把 --global 改成 --local )\n",
+    "- 設置拉取專案時的策略\n",
+    "    - git <font color=\"yellow\">config</font> <font color=\"gray\">--global</font> <font color=\"lightblue\">pull.rebase</font> <font color=\"green\">\"false\"</font>\n",
     "\n",
-    "A_side = 4\n",
-    "B_side = 5\n",
-    "\n",
-    "C_side = math.sqrt(A_side**2 + B_side**2)\n",
-    "\n",
-    "print(f\"由二邊長 {A_side} 及 {B_side} 構成的直角三角形，其斜邊長為 {C_side:0.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "e31b44c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "由二邊長 [4, 5] 構成的直角三角形，其斜邊長為 6.40\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 使用lambda方式重寫\n",
-    "\n",
-    "import math \n",
-    "\n",
-    "side = [4, 5]\n",
-    "slen = math.sqrt((lambda lst: sum(x**2 for x in lst))(side)) \n",
-    "print(f\"由二邊長 {side} 構成的直角三角形，其斜邊長為 {slen:0.2f}\")"
+    "    (這裏是指定在拉取時，使用 merge 而非 rebase)"
    ]
   }
  ],
