--- a/git_Userbook.ipynb
+++ b/git_Userbook.ipynb
@@ -82,6 +82,18 @@
     "\n",
     "  - git push origin master\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12647ad1",
+   "metadata": {},
+   "source": [
+    "## 要注意的事項\n",
+    "\n",
+    "開啟clone下來的專案後，每次都要先做\n",
+    "\n",
+    "git <font color=\"red\">pull</font>\n"
+   ]
   }
  ],
  "metadata": {
